# WRF-WindNinja-FarsiteScript

./: .gitignore  CMakeLists.txt  readme
config/: default.cmake
developer_scripts/forCreateIgnition/: CMakeLists.txt  forCreateIgnition.cpp  readme
developer_scripts/forCreateIgnition/farsiteInputFiles/: a_run_allOriginalIgnitions.txt  b_run_createdIgnitions_polygon-ignit-shape-files.txt  d_run_createdIgnitions_farsite-output-fire-perimeter-files.txt
developer_scripts/forCreateIgnition/farsiteRunFiles/: readme
developer_scripts/forWrfGetWeather/: CMakeLists.txt  alternative_Makefile  forWrfGetWeather.cpp  readme
developer_scripts/forWrfGetWeather/config/: default.cmake
developer_scripts/forWrfGetWeather/wrfGetWeatherInputFiles/: wrfout_d3.2015080912.f12.0000-gdalinfo  wrfout_d3.2015080912.f12.0000-trimmed-gdalinfo
developer_scripts/gdalTestInputFiles/: 0-readme  10a-flatland_Perimeters.shp  10a-flatland_Perimeters.shx  10b-ogrinfo-flatland_Perimeters  11a-cougarCreekFire_Perimeters.shp  12b-ogrinfo-cougarCreek-polygonIgnit-perimetersAsIgnit-perimeters-linuxOnFirelaborg  13a-cougarCreek-pointIgnit-perimeters-firelaborg.dbf  14a-cougarCreek-pointIgnit-perimetersAsIgnit-perimeters-firelaborg.dbf  14b-ogrinfo-cougarCreek-pointIgnit-perimetersAsIgnit-perimeters-firelaborg  15a-cougarCreek-3pointIgnit-perimeters-firelaborg.dbf  15a-cougarCreek-3pointIgnit-perimeters-firelaborg.shp  15b-ogrinfo-cougarCreek-3pointIgnit-perimeters-firelaborg  16b-ogrinfo-cougarCreek-3pointIgnit-perimetersAsIgnit-perimeters-firelaborg  18a-cougarCreek-polygonIgnit-perimetersAsIgnit-perimeters-firelaborg.shp  18b-ogrinfo-cougarCreek-polygonIgnit-perimetersAsIgnit-perimeters-firelaborg  1b-gdalinfo-wrfout_d3.2015080912.f12.0000  20b-ogrinfo-cougarCreek-3polygonIgnit-perimetersAsIgnit-perimeters-firelaborg  21b-gdalinfo-cougarCreekFire  22b-gdalinfo-flatland  23b-gdalinfo-test1177973  2a-wa_cougar_creek_20150811_2300_dd83.dbf  2a-wa_cougar_creek_20150811_2300_dd83.sbn  2c-wa_cougar_creek_20150819_0155_dd83.dbf  2c-wa_cougar_creek_20150819_0155_dd83.sbx  2c-wa_cougar_creek_20150819_0155_dd83.shp  2c-wa_cougar_creek_20150819_0155_dd83.shp.xml  2c-wa_cougar_creek_20150819_0155_dd83.shx  2d-ogrinfo-wa_cougar_creek_20150819_0155_dd83  3a-test1177973_NTFBIgnition.shp  3a-test1177973_NTFBIgnition.shx  3b-ogrinfo-test1177973_NTFBIgnition  4a-centerIgnit.prj  4a-centerIgnit.shp  4a-centerIgnit.shx  4b-ogrinfo-centerIgnit  5b-ogrinfo-cougarCreek-pointIgnit  6b-ogrinfo-cougarCreek-3pointIgnit  7a-cougarCreek-polygonIgnit.shx  7b-ogrinfo-cougarCreek-polygonIgnit  9a-test1177973_Perimeters.shp  (+1 more)
examples/cougarCreek/: firstRunCougarCreek.txt  runCougarCreek.txt  template-runCougarCreek.txt
examples/cougarCreek-fire/: firstRunCougarCreekFire-trimmed-simple.txt  firstRunCougarCreekFire-trimmed.txt  firstRunCougarCreekFire.txt  runCougarCreek-fire.txt  template-runCougarCreek-fire.txt
examples/cougarCreek-fire/a-originalInputs/: colorInput.CLR
examples/cougarCreek/a-originalInputs/: cougarCreek-colors.CLR
include/: buildEverything.sh  buildEverything_Aeolus.sh  buildEverything_Ubuntu.sh  buildEverything_UbuntuAlternative.sh  build_deps.sh  configVariable.h  createFarsiteInputs.h  createIgnitions.h  runComboScriptExample.sh  scriptConfigVariables.h  scriptInputs.h  wrfInterpretation.h  wrfTrimmer.sh
src/: WindNinjaAPI.cpp  WindNinjaAPI.h  configVariable.cpp  createFarsiteInputs.cpp  createFarsiteInputs.h  createIgnitions.cpp  createIgnitions.h  farsite.cpp  farsite.h  farsiteAPI.cpp  farsiteAPI.h  getFarsitePath.cpp  getFarsitePath.h  getWindNinjaPath.cpp  getWindNinjaPath.h  inputParser.cpp  inputParser.h  inputVariable_info.cpp  inputVariable_info.h  inputVariablesHandler.cpp  inputVariablesHandler.h  inputVariables_infoStorage.cpp  inputVariables_infoStorage.h  inputVariables_valueStorage.cpp  inputVariables_valueStorage.h  lcpDownloader.cpp  lcpDownloader.h  lcpManager.cpp  lcpManager.h  main.cpp  scriptConfigVariables.cpp  scriptInputs.cpp  wrfGetWeather.cpp  wrfGetWeather.h  wrfInterpretation.cpp  wrfInterpretation.h
src/inputClasses/: inputParser.cpp  inputParser.h  inputVariable_info.cpp  inputVariable_info.h  inputVariablesHandler.cpp  inputVariablesHandler.h  inputVariablesInitializer.cpp  inputVariablesInitializer.h  inputVariables_infoStorage.cpp  inputVariables_infoStorage.h  inputVariables_valueStorage.cpp  inputVariables_valueStorage.h  singleInputVariable.cpp  singleInputVariable.h
src/inputClasses/multiValueDataTypes/: GeoMACfirePerimeterFileStorage.cpp  GeoMACfirePerimeterFileStorage.h  additionalWindNinjaOutputs_googleStorage.cpp  additionalWindNinjaOutputs_googleStorage.h  additionalWindNinjaOutputs_pdfStorage.cpp  additionalWindNinjaOutputs_pdfStorage.h  (+10 more)
src/inputDataTypes/: GeoMACfirePerimeterFileStorage.cpp  GeoMACfirePerimeterFileStorage.h  additionalWindNinjaOutputs_googleStorage.cpp  additionalWindNinjaOutputs_googleStorage.h  additionalWindNinjaOutputs_pdfStorage.cpp  additionalWindNinjaOutputs_pdfStorage.h  additionalWindNinjaOutputs_shapefileStorage.cpp  additionalWindNinjaOutputs_shapefileStorage.h  boolValue.cpp  boolValue.h  createIgnitionFromLatLongsStorage.cpp  createIgnitionFromLatLongsStorage.h  dateValue.cpp  dateValue.h  doubleValue.cpp  doubleValue.h  farsiteOutputFirePerimeterFileStorage.cpp  farsiteOutputFirePerimeterFileStorage.h  hour_minValue.cpp  hour_minValue.h  intValue.cpp  intValue.h  lat_longValue.cpp  lat_longValue.h  lcpFileValue.cpp  lcpFileValue.h  pathNameValue.cpp  pathNameValue.h  polygonIgnitShapeFileStorage.cpp  polygonIgnitShapeFileStorage.h  shapeFileValue.cpp  shapeFileValue.h  size_tValue.cpp  size_tValue.h  stringValue.cpp  stringValue.h  wrfFileStorage.cpp  wrfFileStorage.h  wrfFileValue.cpp  wrfFileValue.h
src/utilityClasses/: calcTime.cpp  calcTime.h  copySingleFile.cpp  copySingleFile.h  createFolder.cpp  createFolder.h  doesFilenameExist.cpp  doesFilenameExist.h  doesFolderExist.cpp  doesFolderExist.h  findFileBaseNameStuff.cpp  findFileBaseNameStuff.h  isValidExecFile.cpp  isValidExecFile.h
utility_scripts/: keywordReplacer.sh
(+760 files in other folders)
